--- a/pruebamockapi.html
+++ b/pruebamockapi.html
@@ -81,7 +81,7 @@
                         <h5 class="card-title mb-4">Control por Voz</h5>
                         <div class="list-group text-left">
                             <a href="#" class="list-group-item list-group-item-action" id="openPage">Abrir Página</a>
-                            <a href="#" class="list-group-item list-group-item-action" id="goToPage">Ir a Página</a>
+                            <a href="#" class="list-group-item list-group-item-action" id="goToPage">Ir a Netflix</a>
                             <a href="#" class="list-group-item list-group-item-action" id="openImage">Abrir Imagen</a>
                             <a href="#" class="list-group-item list-group-item-action" id="changeSize">Cambiar Tamaño</a>
                             <a href="#" class="list-group-item list-group-item-action" id="sayInstructions">Instrucciones</a>
